# BOT

./: CMakeLists.txt  README (1).md  README.md  arduino_motor_bridge.ino  auto_mapper.py  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  exploration_params.yaml  global_costmap_params.yaml  gmapping_params.yaml  local_costmap_params.yaml  move_base_params.yaml
launch/: amcl.launch  display.launch  explore_lite.launch  gazebo.launch  gazebo_with_camera.launch  gazebo_with_lidar.launch  hardware_bringup.launch  mapping_teleop.launch  move_base.launch  navigation.launch  rplidar.launch  sim_obstacles.launch  sim_slam.launch  slam.launch  slam_gmapping.launch  teleop_hardware.launch
rviz/: exploration.rviz  mapping.rviz  navigation.rviz  robot_view,rviz  robot_with_camera.rviz  robot_with_lidar.rviz  slam.rviz
urdf/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
